# MediaWiki-Tools

./: .editorconfig  .gitignore  LICENCE  Pipfile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: codeql-analysis.yml  test-cov.yml
app/: class.py  classes.py  functions.py
docs/: index.html  mwtools.html  search.js
docs/mwtools/: mediawikitools.html
mwtools/: __init__.py  mediawikitools.py
src/: classes.py  mediawikitools.py
src/MediaWiki_Tools.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_class.py  test_funcs.py  test_funcs_offline.py  test_funcs_online.py  tests.py
