[metadata]
name = MediaWiki-Tools
version = 0.0.1
description =  Tools for getting data from MediaWiki websites 
licence = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nick-robo/MediaWiki-Tools
project_urls =
    Bug Tracker = https://github.com/nick-robo/MediaWiki-Tools/issues

[options]
package_dir =
    = mwtools
packages = find:
python_requires = >=3.8

[options.packages.find]
where = mwtools

[flake8]
use-flake8-tabs = true
ignore = 
  ET127
  W503
  W504

[yapf]
use_tabs = true