[metadata]
name = MediaWiki-Tools
version = 0.1.1
description =  Tools for getting data from MediaWiki websites 
licence = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nick-robo/MediaWiki-Tools
project_urls =
    Bug Tracker = https://github.com/nick-robo/MediaWiki-Tools/issues

[options]
packages = mwtools
python_requires = >=3.8
install_requires =
    requests
    beautifulsoup4
    pymediawiki

[flake8]
use-flake8-tabs = true
ignore = 
  ET127
  W503
  W504
  D206
  W191
  E101

[yapf]
use_tabs = true